fixed build failure issue